# musicfree

./: .gitignore  Cargo.toml  README.md  ytdlp.js
.github/workflows/: release.yml  test.yml
src/: bilibili.rs  core.rs  download.rs  error.rs  file.rs  headers.rs  lib.rs  main.rs  utils.rs  youtube.rs
src/bilibili/: api.rs  core.rs  mod.rs  types.rs  utils.rs
src/file/: mod.rs
src/youtube/: android.rs  common.rs  core.rs  ejs.rs  mod.rs  types.rs  utils.rs  web.rs
