[package]
name = "musicfree"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "musicfree"
repository = "https://github.com/ahaoboy/musicfree"
homepage = "https://github.com/ahaoboy/musicfree"
authors = ["ahaoboy"]

[features]
default = ["bindgen", "ytdlp-ejs"]
bindgen = ["ytdlp-ejs/bindgen"]
ytdlp-ejs = ["dep:ytdlp-ejs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "gzip",
  "cookies"
], default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
regex = "1"
urlencoding = "2"
ytdlp-ejs = { version = "0.1", git = "https://github.com/ahaoboy/ytdlp-ejs", default-features = false, optional = true, features = [
  "qjs",
] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
sanitize-filename = "0.6"
strum = "0.27"
strum_macros = "0.27"
url = "2"
md5 = "*"
abv = "0.3"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
