[package]
name = "musicfree"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "musicfree"
repository = "https://github.com/ahaoboy/musicfree"
homepage = "https://github.com/ahaoboy/musicfree"
authors = ["ahaoboy"]

[features]
default = ["bindgen", "cli", "qjs"]
bindgen = ["ytdlp-ejs/bindgen"]
qjs = ["ytdlp-ejs/qjs"]
# boa = ["ytdlp-ejs/boa"]
cli = ["dep:clap", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = [
  "json",
  "gzip",
  "rustls-native-certs",
  "cookies",
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "time",
], default-features = false, optional = true }
thiserror = "2"
regex = "1"
urlencoding = "2"
ytdlp-ejs = { version = "0.1", git = "https://github.com/ahaoboy/ytdlp-ejs", default-features = false, features = []}
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
sanitize-filename = "0.6"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4", features = ["derive"], optional = true }
url = "2"
md5 = "0.8"
abv = "0.3"
git-version = "0.3"
const-str = "1"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[[bin]]
required-features = ["cli"]
name = "musicfree"
