[package]
name = "musicfree"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "musicfree"
repository = "https://github.com/ahaoboy/musicfree"
homepage = "https://github.com/ahaoboy/musicfree"
authors = ["ahaoboy"]

[features]
default = ["cli", "bilibili", "youtube", "qjs"]
bindgen = ["ytdlp-ejs/bindgen"]
qjs = ["ytdlp-ejs", "ytdlp-ejs/qjs"]
boa = ["ytdlp-ejs", "ytdlp-ejs/boa", "dep:icu_normalizer"]
cli = ["dep:clap", "dep:tokio"]
bilibili = []
youtube = []
ytdlp-ejs = ["dep:ytdlp-ejs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# FIXME: ANDROID NOT WORKING WITH REQWEST 0.13
# reqwest = { version = "0.13", features = [
#   "json",
#   "gzip",
#   "rustls-native-certs",
#   "cookies",
# ] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "gzip",
  "cookies",
], default-features = false }

tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "time",
], default-features = false, optional = true }
thiserror = "2"
regex = "1"
urlencoding = "2"
ytdlp-ejs = { version = "0.1", git = "https://github.com/ahaoboy/ytdlp-ejs", default-features = false, optional = true, features = [
] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
sanitize-filename = "0.6"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4", features = ["derive"], optional = true }
url = "2"
md5 = "0.8"
abv = "0.3"
git-version = "0.3"
const-str = "1"
icu_normalizer = { version = "2", optional = true }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[[bin]]
required-features = ["cli"]
name = "musicfree"
